+ ported to 1.19 Note: Multiplayer is untested!